--- a/pvc/pvc.yaml
+++ b/pvc/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  VolumeMode: Filesystem
+  volumeMode: Filesystem
   resources:
     requests:
       storage: 10Mi
