--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -9,7 +9,7 @@ spec:
       app: myredis
   template:
     metadata:
-      lables:
+      labels:
         app: myredis
     spec:
       containers:
