--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
       - image: redis
         name: myredis
+        ports:
+        - name: tcp
+          containerPort: 6379
         readinessProbe:
           httpGet:
             port: 6379
