--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         ports:
         - name: tcp
           containerPort: 6379
-        livenessPorbe:
+        livenessProbe:
           httpGet:
             path: /
             port: 6379
