--- a/deployment/deployment.yaml
+++ b/deployment/deployment.yaml
@@ -18,4 +18,11 @@ spec:
         ports:
         - name: tcp
           containerPort: 6379
+        resources:
+          requests:
+            cpu: 200m
+            memory: 64M
+          limits:
+            cpu: 200m
+            memory: 64M
     
