--- a/liveness/pod-tcp-liveness.yaml
+++ b/liveness/pod-tcp-liveness.yaml
@@ -11,7 +11,7 @@ spec:
     ports:
     - containerPort: 8080
     readnessProbe:
-      tcpSocket：
+      tcpSocket:
         port: 8080
       initialDelaySeconds: 5
       periodSeconds: 10
