--- a/liveness/pod-tcp-liveness.yaml
+++ b/liveness/pod-tcp-liveness.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: tcp-liveness
-    image: goproxy
+    image: k8s.gcr.io/goproxy
     ports:
     - containerPort: 8080
     readinessProbe:
