--- a/liveness/pod-tcp-liveness.yaml
+++ b/liveness/pod-tcp-liveness.yaml
@@ -20,5 +20,6 @@ spec:
       tcpSocket:
         port: liveness-port
       initialDelaySeconds: 5
+      failureThreshold: 3
       periodSeconds: 10
     
