--- a/liveness/pod-tcp-liveness.yaml
+++ b/liveness/pod-tcp-liveness.yaml
@@ -22,4 +22,8 @@ spec:
       initialDelaySeconds: 5
       failureThreshold: 3
       periodSeconds: 10
-    
+    startupProbe:
+      httpGet:
+        port: liveness-port
+      failureThreshold: 30
+      periodSeconds: 10
