--- a/pod/init-containers/service.yaml
+++ b/pod/init-containers/service.yaml
@@ -1,4 +1,4 @@
-apiVsersion: v1
+apiVersion: v1
 kind: Service
 metada:
   name: myservice
@@ -7,7 +7,7 @@ spec:
   - protocol: TCP
     targetPort: 9376
 ---
-apiVsersion: v1
+apiVersion: v1
 kind: Service
 metada:
   name: mydb
