fix service.metadata error

--- a/pod/init-containers/service.yaml
+++ b/pod/init-containers/service.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Service
-metada:
+metadata:
   name: myservice
 spec:
   ports:
@@ -9,7 +9,7 @@ spec:
 ---
 apiVersion: v1
 kind: Service
-metada:
+metadata:
   name: mydb
 spec:
   ports:
