fix spec.containers.command error

--- a/pod/init-containers/pod-with-initcontainers.yaml
+++ b/pod/init-containers/pod-with-initcontainers.yaml
@@ -8,7 +8,7 @@ spec:
   containers:
   - name: mypod
     image: busybox:1.28
-    commond: ['sh' '-c' 'cat /tmp/tmp.txt && sleep 64000000']
+    command: ['sh' '-c' 'cat /tmp/tmp.txt && sleep 64000000']
     volumeMounts:
     - name: mydir
       mountPath: /tmp
