--- a/pod/pod-with-multiContainers.yaml
+++ b/pod/pod-with-multiContainers.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: multilContainersPod
+  name: multil-containers-pod
   labels:
     app: test
   namespace: default
